@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-19T01:16:07Z",
-  "count_outdated" : 2559,
-  "uniques_outdated" : 827,
-  "count" : 2601,
-  "uniques" : 841,
+  "timestamp" : "2024-06-19T12:33:27Z",
+  "count_outdated" : 2561,
+  "uniques_outdated" : 829,
+  "count" : 2603,
+  "uniques" : 842,
   "views" : [
-    {
-      "timestamp": "2024-06-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-06-06T00:00:00Z",
       "count": 4,
@@ -85,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-06-19T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
