@@ -1,12 +1,7 @@
 {
   "count": 42,
-  "uniques": 12,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2024-06-05T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-06-06T00:00:00Z",
       "count": 4,
@@ -46,6 +41,11 @@
       "timestamp": "2024-06-18T00:00:00Z",
       "count": 5,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-06-19T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
