@@ -1,3 +1,12 @@
+2024-06-19T12:33:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9582063045 # 355
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-19
+* notice: last 14d: unq all: 11 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 827 2559 / 841 2601
+* notice: next accum: outdated-unq outdated-all / unq all: 829 2561 / 842 2603
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2024-06-05] / [2024-06-19]
+
 2024-06-19T01:16:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9574537211 # 354
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-19
